# Release_Tool

./: .gitignore  README.md  pyproject.toml  run_gui.py  taiga.local.example.json
src/release_note_tool/: __init__.py  app.py  core.py  main.py  taiga.py
tests/: smoke_test.py
